src/scss/entry/all.scss
/* ... */
#subscription-status-info {
    .icon-regular-roblox-plus {
        width: 27.999px;
        height: 27.999px;
    }
    .btn-generic-navigation {
        position: relative;
    }

    #nav-subscription-status-icon-dot {
        position: absolute;
        bottom: 0;
        right: 0;

        &,
        .roseal-icon {
            width: 16px;
            height: 16px;
            color: var(--RS_ALERT-COLOR);
        }
    }
}

[data-rosealfe-premiumstatusnavbar] {
    &:has(#subscription-status-info) {
        .rbx-upgrade-now {
            display: none;
        }
    }
}

.foundation-web-menu .roseal-menu-item {
    outline-offset: 0;
    overflow: hidden;
    display: flex;
    border-radius: var(--radius-medium);
    border-style: solid;
    border-width: var(--stroke-none);
    box-sizing: border-box;
    column-gap: var(--gap-medium);
    padding-top: var(--padding-small);
    padding-bottom: var(--padding-small);
    padding-left: var(--padding-medium);
    padding-right: var(--padding-medium);
    width: 100%;
    text-align: left;
    font: var(--typography-body-medium-font);
    letter-spacing: var(--typography-body-medium-letter-spacing);
    color: var(--color-content-default);
    background-color: var(--color-none);
    flex-grow: 1;
    flex-direction: column;
    row-gap: var(--gap-xsmall);
    text-overflow: ellipsis;

    transition-property:
        color,
        background-color,
        border-color,
        -webkit-text-decoration-color,
        text-decoration-color,
        fill,
        stroke;
    transition-timing-function: var(--ease-linear);
    transition-duration: var(--time-100);

    &:hover {
        background-color: var(--color-state-hover);
    }

    > span,
    > button,
    > a {
        @extend %roseal-btn;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
        font-size: 16px;
        font-weight: 400;
        line-height: 1.4em;
        color: var(--color-content-emphasis);
        text-align: left;

        [data-internal-page-name="Profile"] & {
            font-size: unset;
        }
    }
}

.MuiPopover-root {
    .roseal-menu-item {
        margin-right: 16px;

        > span,
        > button,
        > a {
            -webkit-tap-highlight-color: transparent;
            background-color: transparent;
            outline: 0px;
            border: 0px;
            width: 100%;
            border-radius: 0px;
            cursor: pointer;
            user-select: none;
            vertical-align: middle;
            appearance: none;
            font-weight: 400;
            font-style: normal;
            font-size: 16px;
            line-height: 140%;
            display: flex;
            -webkit-box-pack: start;
            justify-content: flex-start;
            -webkit-box-align: center;
            align-items: center;
            position: relative;
            text-decoration: none;
            min-height: 48px;
            padding: 6px 16px;
            box-sizing: border-box;
            border-radius: 8px;
            margin: 0px 8px;
            padding: 8px;
            white-space: nowrap;

            @media (min-width: 600px) {
                min-height: auto;
            }

            .light-theme & {
                color: rgb(105, 106, 109);

                &:hover {
                    color: rgb(17, 18, 22);
                    background-color: rgba(51, 59, 76, 0.06);
                }
            }

            .dark-theme & {
                color: rgb(187, 188, 190);

                &:hover {
                    color: rgb(255, 255, 255);
                    background-color: rgba(187, 194, 209, 0.08);
                }
            }
        }
    }
}

.roseal-custom-emoji {
    min-width: 1em !important;
    max-width: 1em !important;
    height: 1em !important;
    width: 1em !important;
    min-height: 1em !important;
    max-height: 1em !important;

    margin: 0 0.05em 0 0.1em !important;
    vertical-align: -0.1em !important;
}

.toggle-thumbnail-type-btn {
    &.roseal-user-profile-btn {
        position: absolute;
        width: fit-content;
        right: 0;
        top: 50px;
        text-align: right;
    }

    &:not(.roseal-user-profile-btn) {
        top: 12px;
        right: 12px;
        user-select: none;
        border: 1px solid transparent;
        background-color: var(--RS_AVATAR-BUTTON-BACKGROUND-COLOR) !important;
        border-color: var(--RS_AVATAR-BUTTON-BORDER-COLOR) !important;
        color: var(--RS_AVATAR-BUTTON-TEXT-COLOR) !important;
        cursor: pointer;
        display: inline-block;
        font-weight: 500;
        height: auto;
        text-align: center;
        white-space: nowrap;
        vertical-align: middle;
        padding: 9px 9px;
        font-size: 16px;
        line-height: 100%;
        border-radius: 3px;
        border: 1px solid #b8b8b8;
        position: absolute;
        min-height: 32px;
    }
}

.download-avatar-file-btn.roseal-user-profile-btn {
    position: absolute;
    width: fit-content;
    right: 0;
    top: 100px;
    text-align: right;
}
/* ... */

